--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
             console.log(data);
 
             document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = data.main.temp;
-            document.querySelector(".humidity").innerHTML = data.main.humidity;
+            document.querySelector(".temp").innerHTML = math.round(data.main.temp) + "°c";
+            document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+            document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
         }
         checkWeather();
         
