--- a/index.html
+++ b/index.html
@@ -87,7 +87,13 @@
 
         searchBtn.addEventListener("click",()=>{
             checkWeather(searchBox.value);
-        })
+        });
+
+        searchBox.addEventListener("keyup", function(event) {
+            if (event.key === "Enter") {
+                checkWeather(searchBox.value);
+            }
+        });
       
         
 
